terraform/ansible/applications/get_api/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: get-api
  labels:
    mirror.linkerd.io/exported: 'true'
