terraform/ansible/applications/get_api/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: get-api
  labels:
    mirror.linkerd.io/exported: true

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-backend-api
  namespace: get-api
  labels:
    app: my-backend-api
    mirror.linkerd.io/exported: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-backend-api
  template:
    metadata:
      labels:
        app: my-backend-api
    spec:
      containers:
      - name: my-backend-api
        image: andyy5/my-backend-api

---
apiVersion: v1
kind: Service
metadata:
  name: my-backend-api
  namespace: get-api
  labels:
    mirror.linkerd.io/exported: true
    app: my-backend-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: my-backend-api


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-backend-api
  namespace: get-api
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    mirror.linkerd.io/exported: true
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /user/
        pathType: Prefix
        backend:
          service:
            name: my-backend-api
            port:
              number: 80
